# miccai-challenge-daoct-baseline

./: .gitignore  Dockerfile  README.md  data_synthetic_v1.0.tar  data_synthetic_v1.tar  md5.txt  md5_v1.0.txt  pyproject.toml  requirements.txt
scripts/: infer_test_monai.py  metrics.py  sanity_check_dataset.py  train_test_monai.py  train_test_monai_semi.py
