[project]
name = "miccai-challenge-daoct-baseline"
version = "0.1.0"
description = ""
authors = [
    {name = "bbearce",email = "bbearce@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy (<2.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "monai (>=1.5.2,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
